objects/echosign_dev1__SIGN_Merge_Mapping__c.object
<CustomObject>
    <customHelpPage>echosign_dev1__EchosignHelp</customHelpPage>
    <fields>
        <fullName>echosign_dev1__Cached_Input_Type__c</fullName>
        <label>Cached Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want this merge mapping to run by default for all agreements sent. You can override the default if you specify a different merge mapping to use with a specific agreement or agreement template.</description>
        <inlineHelpText>Check this box if you want this merge mapping to run by default for all agreements sent. You can override the default if you specify a different merge mapping to use with a specific agreement or agreement template.</inlineHelpText>
        <label>Default Merge Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Merge Mapping</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merge Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>